######################################################################
# 
# Copyright (C) 2025 The Cyber Garage Portable Runtime for C Authors
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#  http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# 
######################################################################

cgprheaders = \
	./cgpr/typedef.h \
	./cgpr/net/socket.h \
	./cgpr/net/interface.h \
	./cgpr/net/socket_opt.h \
	./cgpr/util/cond.h \
	./cgpr/util/list.h \
	./cgpr/util/log.h \
	./cgpr/util/dictionary.h \
	./cgpr/util/timer.h \
	./cgpr/util/string.h \
	./cgpr/util/mutex.h \
	./cgpr/util/bytes.h \
	./cgpr/util/thread.h \
	./cgpr/util/time.h

nobase_include_HEADERS = \
	$(cgprheaders)
